SET(QGIS_MOBILE_APP_SRCS
  feature.cpp
  featurelistmodel.cpp
  featuremodel.cpp
  main.cpp
  qgismobileapp.cpp
  qgsqmlinterface.cpp
  qgsquickmapcanvasmap.cpp
  settings.cpp
)

SET(QGIS_MOBILE_APP_HDRS
  feature.h
  featurelistmodel.h
  featuremodel.h
  qgismobileapp.h
  qgsqmlinterface.h
  qgsquickmapcanvasmap.h
  settings.h
)

SET(QGIS_MOBILE_APP_MOC_HDRS
  featurelistmodel.h
  featuremodel.h
  qgismobileapp.h
  qgsqmlinterface.h
  qgsquickmapcanvasmap.h
  settings.h
)

QT5_WRAP_CPP(QGIS_MOBILE_APP_MOC_SRCS ${QGIS_MOBILE_APP_MOC_HDRS})

INCLUDE_DIRECTORIES(
  ${QGIS_INCLUDE_DIR}
  ${QGIS_INCLUDE_DIR}/gui
  ${QGIS_INCLUDE_DIR}/gui/layertree
  ${QGIS_INCLUDE_DIR}/gui/attributetable
  ${QGIS_INCLUDE_DIR}/core
  ${QGIS_INCLUDE_DIR}/core/raster
  ${Qt5Declarative_INCLUDE_DIRS}
  ${Qt5Core_INCLUDE_DIRS}
  ${Qt5Gui_INCLUDE_DIRS}
  ${Qt5Xml_INCLUDE_DIRS}
  ${Qt5Widgets_INCLUDE_DIRS}
)

FIND_PACKAGE(Qt5Qml REQUIRED)
FIND_PACKAGE(Qt5Quick REQUIRED)
FIND_PACKAGE(Qt5Widgets REQUIRED)

ADD_SUBDIRECTORY(qml)

SET(QML_RCCS qml/qml.qrc)
QT5_ADD_RESOURCES(QML_RCC_SRCS ${QML_RCCS})
SET(IMAGE_RCCS ../images/images.qrc)
QT5_ADD_RESOURCES(IMAGE_RCC_SRCS ${IMAGE_RCCS})


IF (ANDROID)
  ADD_LIBRARY(${QGIS_MOBILE_APP_NAME} SHARED ${QGIS_MOBILE_APP_SRCS} ${QGIS_MOBILE_APP_MOC_SRCS} ${INDEX_SRC} ${QGIS_MOBILE_APP_HDRS} ${QGIS_MOBILE_APP_MOC_HDRS} ${QML_RCC_SRCS} ${IMAGE_RCC_SRCS})
ELSE (ANDROID)
  ADD_EXECUTABLE(${QGIS_MOBILE_APP_NAME} MACOSX_BUNDLE WIN32 ${QGIS_MOBILE_APP_SRCS} ${QGIS_MOBILE_APP_MOC_SRCS} ${QML_RCC_SRCS} ${IMAGE_RCC_SRCS})
ENDIF (ANDROID)

TARGET_LINK_LIBRARIES(${QGIS_MOBILE_APP_NAME}
  ${Qt5Qml_LIBRARIES}
  ${Qt5Quick_LIBRARIES}
  ${Qt5Widgets_LIBRARIES}
  ${QGIS_CORE_LIBRARY}
  ${QGIS_GUI_LIBRARY}
)

INSTALL(TARGETS ${QGIS_MOBILE_APP_NAME}
  BUNDLE DESTINATION ${QGIS_MOBILE_INSTALL_PREFIX}
  RUNTIME DESTINATION ${QGIS_MOBILE_BIN_DIR}
  LIBRARY DESTINATION ${QGIS_MOBILE_LIB_DIR}
  ARCHIVE DESTINATION ${QGIS_MOBILE_LIB_DIR}
  FRAMEWORK DESTINATION ${QGIS_MOBILE_FW_SUBDIR}
  PUBLIC_HEADER DESTINATION ${QGIS_INCLUDE_DIR}
)

